Коррекция JSP файлов (import, заглушки :FVK:).

--- a/elwikijsp.root/bundles/org.elwiki.resources/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/build.properties
@@ -15,4 +15,5 @@ bin.includes = META-INF/,\
                sandler-0.5.jar,\
                freshcookies-security-0.60.jar
 additional.bundles = javax.servlet,\
-                     javax.servlet.jsp
+                     javax.servlet.jsp,\
+                     org.elwiki.data
