--- a/elwikijsp.root/bundles/org.elwiki.resources/main/config/wro/wro.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/main/config/wro/wro.properties
@@ -18,9 +18,14 @@
 #minimizeEnabled=false
 debug=true
 
-
+# :FVK: - variant 1 (it was commented)
 #preProcessors=cssUrlRewriting,cssImport,semicolonAppender
-preProcessors=cssImport,semicolonAppender
 #postProcessors=lessCss,yuiCssMin,uglifyJs
-postProcessors=less4j,yuiCssMin,uglifyJs
 
+# :FVK: - variant 2 (produced error)
+#preProcessors=cssImport,semicolonAppender
+#postProcessors=less4j,yuiCssMin,uglifyJs
+
+# :FVK: - variant 3
+preProcessors=less4j,yuiCssMin,cssImport,semicolonAppender
+postProcessors=uglifyJs
