Added: WikiPage get/set attribute methods. Made: save text of page after editing.

--- a/elwikijsp.root/bundles/org.elwiki.resources/plugin.xml
+++ b/elwikijsp.root/bundles/org.elwiki.resources/plugin.xml
@@ -70,6 +70,8 @@
             load-on-startup="true">
       </filter>
    </extension>
+   <!-- filters ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ -->
+<!--:FVK:
    <extension
          point="org.eclipse.equinox.http.registry.filters">
       <filter
@@ -94,6 +96,7 @@
             load-on-startup="true">
       </filter>
    </extension>
+-->
    <extension
          point="org.eclipse.equinox.http.registry.filters">
       <filter
