--- a/elwikijsp.root/bundles/org.elwiki.resources/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/build.properties
@@ -12,7 +12,8 @@ bin.includes = META-INF/,\
                WEB-INF/,\
                sandler-0.5.jar,\
                freshcookies-security-0.60.jar,\
-               xmlrpc-2.0.1.jar
+               xmlrpc-2.0.1.jar,\
+               page/
 source.. = src/
 additional.bundles = javax.servlet,\
                      javax.servlet.jsp,\
