--- a/elwikijsp.root/bundles_elwiki_model/pom.xml
+++ b/elwikijsp.root/bundles_elwiki_model/pom.xml
@@ -15,6 +15,6 @@
 
 	<modules>
 		<module>org.elwiki.data</module>
-		<module>org.elwiki.data.edit</module>
+		<!-- <module>org.elwiki.data.edit</module> -->
 	</modules>
 </project>
