--- a/elwikijsp.root/releng/global_configuration/pom.xml
+++ b/elwikijsp.root/releng/global_configuration/pom.xml
@@ -13,7 +13,7 @@
 	<properties>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
-   	
+
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.build.timestamp.format>yyyyMMdd-HHmm</maven.build.timestamp.format>
@@ -28,33 +28,6 @@
 		<lucene.version>4.7.0</lucene.version>
 		<selenium.version>2.42.0</selenium.version>
 		<slf4j.version>1.7.12</slf4j.version>
-		-->
-
-		<!--
-			<platform-repo.url>file:/repo/releases/neon/201703141400</platform-repo.url>
-			<platform-repo.url>file:/repo/releases/oxygen/201804111000</platform-repo.url>
-			<rap-repo.url>file:/repo/RAP/rap-3.1.2-SR2a-20170308-2159</rap-repo.url>
-			<rap-repo.url>file:/repo/RAP/rap-3.4.0-R-20171204-1637</rap-repo.url>
-			<license-repo.url>file:/repo/License/p2_archive</license-repo.url>
-		<platform-repo.url>file:/repo/eclipse/releases/2020-03</platform-repo.url>
-		<platform-repo.url>file:/repo/eclipse/releases/2020-12</platform-repo.url>
-		-->
-		<platform-repo.url>file:/repo/eclipse/releases/2021-12</platform-repo.url>
-		<apachetools-repo.url>file:/home/vfedorov/dev/dev_osgi+jsp/GIT/Repositories/apacheTools/target/repository</apachetools-repo.url>
-		<custom-repo01.url>file:/home/vfedorov/dev/dev_wikijsp/GIT/elwiki+jsp/custom-p2-site/target/repository</custom-repo01.url>
-		<custom-repo02.url>file:/home/vfedorov/dev/dev_wikijsp/Repository/additionalArtifacts/target/repository</custom-repo02.url>
-		<custom-repo03.url>file:/home/vfedorov/dev/dev_wikijsp/Repository/fromEclipse/target/repository</custom-repo03.url>
-
-<!--
-		<rap-repo.url>file:/repo/RAP/rap-e4-3.9.0-R-20190612-1720</rap-repo.url>
-		<license-repo.url>file:/repo/License/license_20181016/</license-repo.url>
--->
-
-		<!--
-			<jdbcext-repo.url>file:/repo/Eclipse/CDO_reposes/JDBC_extension_repository</jdbcext-repo.url>
-			<emfcdo-repo.url>file:/repo/Eclipse/CDO_reposes/Repo_emf-cdo-S20160601-1307-Site</emfcdo-repo.url>
-
-		<jdbc-repo.url>file:/repo/CDO_reposes/JDBC_extension_repository</jdbc-repo.url>
 		-->
 
 		<!-- The build type, N for nighty builds, S for stable builds. S-builds will be signed. -->
@@ -93,11 +66,14 @@
 			<url>${custom-repo03.url}</url>
 		</repository>
 <!--
+		<license-repo.url>file:/repo/License/p2_archive</license-repo.url>
+		<rap-repo.url>file:/repo/RAP/rap-e4-3.9.0-R-20190612-1720</rap-repo.url>
 		<repository>
 			<id>rap-repo</id>
 			<layout>p2</layout>
 			<url>${rap-repo.url}</url>
 		</repository>
+		<jdbc-repo.url>file:/repo/CDO_reposes/JDBC_extension_repository</jdbc-repo.url>
 		<repository>
 			<id>jdbc-repo</id>
 			<layout>p2</layout>
@@ -107,9 +83,43 @@
 	</repositories>
 
 	<build>
+		<sourceDirectory>src</sourceDirectory>
 		<plugins>
 			<plugin>
-				<!-- Builds Java documenatation. -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-toolchains-plugin</artifactId>
+				<version>3.0.0</version>
+				<configuration>
+					<toolchains>
+						<!-- this project needs a JDK toolchain, version 17 -->
+						<jdk>
+							<version>11</version>
+							<vendor>openjdk</vendor>
+						</jdk>
+					</toolchains>
+				</configuration>
+				<executions>
+					<execution>
+						<!-- the toolchain goal binds to the validate phase automatically -->
+						<goals>
+							<goal>toolchain</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- enable tycho build extension -->
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>target-platform-configuration</artifactId>
+			</plugin>
+
+			<!-- Builds Java documenatation. -->
+			<plugin>
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>3.1.1</version>
 				<configuration>
@@ -140,22 +150,36 @@
 					<quiet>true</quiet>
 				</configuration>
 			</plugin>
+		</plugins>
 
-			<plugin>
-				<!-- enable tycho build extension -->
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-maven-plugin</artifactId>
-				<version>${tycho.version}</version>
-				<extensions>true</extensions>
-			</plugin>
-			<plugin>
-				<!-- Restrict to environment to enable platform independent war-build -->
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>target-platform-configuration</artifactId>
-				<version>${tycho.version}</version>
-				<configuration>
-					<resolver>p2</resolver>
-					<!--
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<!-- enable tycho build extension -->
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-maven-plugin</artifactId>
+					<version>${tycho.version}</version>
+					<extensions>true</extensions>
+				</plugin>
+
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-compiler-plugin</artifactId>
+					<version>${tycho.version}</version>
+					<configuration>
+						<encoding>UTF-8</encoding>
+					</configuration>
+				</plugin>
+
+				<plugin>
+					<!-- Restrict to environment to enable platform independent war-build -->
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>target-platform-configuration</artifactId>
+					<version>${tycho.version}</version>
+					<configuration>
+						<resolver>p2</resolver>
+						<executionEnvironment>JavaSE-11</executionEnvironment>
+						<!-- :FVK: что это определяет?
 						<target>
 						<artifact>
 						<groupId>fvk.data.server</groupId>
@@ -163,66 +187,120 @@
 						<version>1.0.0-SNAPSHOT</version>
 						</artifact>
 						</target>
-					-->
-					<environments>
-						<environment>
-							<os>linux</os>
-							<ws>gtk</ws>
-							<arch>x86_64</arch>
-						</environment>
-					</environments>
-				</configuration>
-			</plugin>
+						-->
+						<environments>
+							<environment>
+								<os>${target-os}</os>
+								<ws>${target-ws}</ws>
+								<arch>${target-arch}</arch>
+							</environment>
+						</environments>
+					</configuration>
+				</plugin>
 
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-p2-plugin</artifactId>
-				<version>${tycho.version}</version>
-				<configuration>
-					<baselineRepositories>
-						<repository>
-							<url>${tycho-baseline-repo.url}</url>
-						</repository>
-					</baselineRepositories>
-				</configuration>
-			</plugin>
+				<!-- Configure qualifier replacement -->
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-packaging-plugin</artifactId>
+					<version>${tycho.version}</version>
+					<configuration>
+						<format>yyyyMMdd-HHmm</format>
+					</configuration>
+				</plugin>
 
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-source-plugin</artifactId>
-				<version>${tycho.version}</version>
-				<executions>
-					<execution>
-						<id>plugin-source</id>
-						<goals>
-							<goal>plugin-source</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-p2-plugin</artifactId>
+					<version>${tycho.version}</version>
+					<configuration>
+						<baselineRepositories>
+							<repository>
+								<url>${tycho-baseline-repo.url}</url>
+							</repository>
+						</baselineRepositories>
+					</configuration>
+				</plugin>
 
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-surefire-plugin</artifactId>
-				<version>${tycho.version}</version>
-			</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-source-plugin</artifactId>
+					<version>${tycho.version}</version>
+					<executions>
+						<execution>
+							<id>plugin-source</id>
+							<goals>
+								<goal>plugin-source</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
 
-			<plugin>
-				<groupId>ro.isdc.wro4j</groupId>
-				<artifactId>wro4j-maven-plugin</artifactId>
-				<version>${wro4j.version}</version>
-				<configuration>
-					<!--
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-surefire-plugin</artifactId>
+					<version>${tycho.version}</version>
+				</plugin>
+
+				<plugin>
+					<groupId>ro.isdc.wro4j</groupId>
+					<artifactId>wro4j-maven-plugin</artifactId>
+					<version>${wro4j.version}</version>
+					<configuration>
+						<!--
 						<targetGroups>all</targetGroups>
 						<jsDestinationFolder>${project.build.directory}/generated-sources/wro/scripts</jsDestinationFolder>
 						<wroManagerFactory>ro.isdc.wro.maven.plugin.manager.factory.ConfigurableWroManagerFactory</wroManagerFactory>
-					-->
-					<contextFolder>${project.basedir}/main/context/</contextFolder>
-					<extraConfigFile>${project.basedir}/main/config/wro/wro.properties</extraConfigFile>
-					<minimize>${minimize}</minimize>
-					<ignoreMissingResources>false</ignoreMissingResources>
-				</configuration>
-			</plugin>
-		</plugins>
+						-->
+						<contextFolder>${project.basedir}/main/context/</contextFolder>
+						<extraConfigFile>${project.basedir}/main/config/wro/wro.properties</extraConfigFile>
+						<minimize>${minimize}</minimize>
+						<ignoreMissingResources>false</ignoreMissingResources>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
+
+	<profiles>
+		<profile>
+			<id>linux</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+				<os>
+					<family>unix</family>
+				</os>
+			</activation>
+			<properties>
+				<platform-repo.url>file:/repo/eclipse/releases/2021-12</platform-repo.url>
+				<apachetools-repo.url>file:/home/vfedorov/dev/dev_osgi+jsp/GIT/Repositories/apacheTools/target/repository</apachetools-repo.url>
+				<custom-repo01.url>file:/home/vfedorov/dev/dev_wikijsp/GIT/elwiki+jsp/custom-p2-site/target/repository</custom-repo01.url>
+				<custom-repo02.url>file:/home/vfedorov/dev/dev_wikijsp/Repository/additionalArtifacts/target/repository</custom-repo02.url>
+				<custom-repo03.url>file:/home/vfedorov/dev/dev_wikijsp/Repository/fromEclipse/target/repository</custom-repo03.url>
+				<target-os>linux</target-os>
+				<target-ws>gtk</target-ws>
+				<target-arch>x86_64</target-arch>
+			</properties>
+		</profile>
+
+		<profile>
+			<id>windows</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+				<os>
+					<family>windows</family>
+				</os>
+			</activation>
+			<properties>
+				<platform-repo.url>file:///D:/Repositories/p2/eclipse/releases/2021-12</platform-repo.url>
+				<apachetools-repo.url>file:///D:/devj/dev_wikijsp/2021-12/Repositories/apacheTools/target/repository</apachetools-repo.url>
+				<custom-repo01.url>file:///D:/devj/dev_wikijsp/2021-12/Repositories/custom-p2-site/target/repository</custom-repo01.url>
+				<custom-repo02.url>file:///D:/devj/dev_wikijsp/Repository/additionalArtifacts/target/repository</custom-repo02.url>
+				<custom-repo03.url>file:///D:/devj/dev_wikijsp/Repository/fromEclipse/target/repository</custom-repo03.url>
+				<target-os>win32</target-os>
+				<target-ws>win32</target-ws>
+				<target-arch>x86_64</target-arch>
+			</properties>
+			<build></build>
+		</profile>
+	</profiles>
 </project>
