fix: сборка ресурсов.

--- a/elwikijsp.root/bundles/org.elwiki.resources/main/config/wro/wro.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/main/config/wro/wro.properties
@@ -23,8 +23,8 @@ debug=true
 #postProcessors=lessCss,yuiCssMin,uglifyJs
 
 # :FVK: - variant 2 (produced error)
-#preProcessors=cssImport,semicolonAppender
-#postProcessors=less4j,yuiCssMin,uglifyJs
+preProcessors=cssImport,semicolonAppender
+postProcessors=less4j,yuiCssMin,uglifyJs
 
 # :FVK: - variant 3
 #preProcessors=less4j,yuiCssMin,cssImport,semicolonAppender
