--- a/elwikijsp.root/bundles/org.elwiki.core.plugins/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.core.plugins/build.properties
@@ -1,7 +1,8 @@
 source.. = src/
 output.. = target/classes/
 bin.includes = META-INF/,\
-               .
+               .,\
+               plugin.xml
 additional.bundles = javax.servlet,\
                      javax.servlet.jsp,\
                      javax.mail,\
