события LOGIN/LOGOUT реализованы с EventAdmin OSGi. (старый код не удален)

--- a/elwikijsp.root/bundles/org.elwiki.main/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.main/build.properties
@@ -1,12 +1,7 @@
 source.. = src/
 output.. = target/classes/
 bin.includes = META-INF/,\
-               OSGI-INF/,\
-               OSGI-INF/aclsSPI.xml,\
-               OSGI-INF/contentsSPI.xml,\
-               OSGI-INF/contextSPI.xml,\
-               OSGI-INF/engineSPI.xml,\
-               OSGI-INF/sessionSPI.xml
+               OSGI-INF/
 additional.bundles = javax.servlet,\
                      javax.servlet.jsp,\
                      javax.mail,\
