--- a/elwikijsp.root/bundles/org.elwiki.resources/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.resources/build.properties
@@ -15,6 +15,6 @@ bin.includes = META-INF/,\
                xmlrpc-2.0.1.jar,\
                page/
 source.. = src/
-additional.bundles = javax.servlet,\
-                     javax.servlet.jsp,\
-                     org.elwiki.data
+additional.bundles = javax.servlet.jsp,\
+                     org.elwiki.data,\
+                     jakarta.servlet-api
