add test. initial step.

--- a/elwikijsp.root/bundles/org.elwiki.main/build.properties
+++ b/elwikijsp.root/bundles/org.elwiki.main/build.properties
@@ -1,7 +1,23 @@
 source.. = src/
 output.. = target/classes/
 bin.includes = META-INF/,\
-               OSGI-INF/
+               .,\
+               OSGI-INF/,\
+               akismet-java-1.02.jar,\
+               ehcache-2.10.6.jar,\
+               freshcookies-security-0.60.jar,\
+               lucene-analyzers-common-8.5.1.jar,\
+               lucene-core-8.5.1.jar,\
+               lucene-highlighter-8.5.1.jar,\
+               lucene-memory-8.5.1.jar,\
+               lucene-queries-8.5.1.jar,\
+               lucene-queryparser-8.5.1.jar,\
+               lucene-sandbox-8.5.1.jar,\
+               org.suigeneris.jrcs.diff-0.4.2.jar,\
+               ini/,\
+               CoreResources/,\
+               plugin/,\
+               templates/
 additional.bundles = javax.servlet,\
                      javax.servlet.jsp,\
                      javax.mail,\
