--- a/elwikijsp.root/bundles_4tests/org.elwiki.test.storage/.project
+++ b/elwikijsp.root/bundles_4tests/org.elwiki.test.storage/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.elwiki.main</name>
+	<name>org.elwiki.test.storage</name>
 	<comment></comment>
 	<projects>
 	</projects>
