--- a/elwikijsp.root/bundles/org.elwiki.resources/plugin.xml
+++ b/elwikijsp.root/bundles/org.elwiki.resources/plugin.xml
@@ -2,6 +2,18 @@
 <?eclipse version="3.4"?>
 <plugin>
    <!-- START ~~ :FVK: definitions ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ -->
+
+   <extension
+         point="org.eclipse.core.runtime.adapters">
+      <factory
+            adaptableType="org.apache.wiki.api.core.Command"
+            class="org.elwiki.internal.CmdCodeAdapterFactory">
+         <adapter
+               type="org.elwiki.internal.CmdCode">
+         </adapter>
+      </factory>
+   </extension>
+<!-- ~~ :FVK: ~~ перенесено в @Component -->
    <extension
          id="filter.context"
          point="org.eclipse.equinox.http.registry.filters">
@@ -12,7 +24,7 @@
             load-on-startup="true">
       </filter>
    </extension>
-   
+<!-- ~~ :FVK: ~~ перенесено в @Component -->
    <extension
          point="org.eclipse.equinox.http.registry.filters">
       <filter
@@ -22,7 +34,7 @@
             load-on-startup="true">
       </filter>
    </extension>
-
+<!-- ~~ :FVK: ~~ перенесено в @Component -->
    <extension
          point="org.eclipse.equinox.http.registry.filters">
       <filter
@@ -32,7 +44,7 @@
             load-on-startup="true">
       </filter>
    </extension>
-
+<!-- ~~TEST~~ -->
    <extension
          point="org.eclipse.equinox.http.registry.servlets">
       <servlet
@@ -41,6 +53,7 @@
             httpcontextId="org.elwiki.resources.httpcontext">
       </servlet>
    </extension>
+<!-- ~~TEST~~ -->
    <extension
          id="pages"
          point="org.eclipse.equinox.http.registry.httpcontexts">
@@ -52,11 +65,13 @@
          </resource-mapping>
       </httpcontext>
    </extension>
+
 <!--
          <resource-mapping
                path="/">
          </resource-mapping>
 -->
+
    <!-- END ~ ~~ :FVK: definitions ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ -->
 
    <extension
@@ -113,6 +128,7 @@
             base-name="/resources/templates/default/haddock-dark.css">
       </resource>
    </extension>
+
 <!-- JSPwiki
    <extension
          point="org.eclipse.equinox.http.registry.servlets">
@@ -135,7 +151,18 @@
             load-on-startup="true">
       </filter>
    </extension>
+
    <!-- filters ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ ~~ -->
+
+   <extension
+         point="org.eclipse.equinox.http.registry.filters">
+      <filter
+            alias="/wiki/*"
+            class="org.apache.wiki.ui.WikiJSPFilter"
+            load-on-startup="true">
+      </filter>
+   </extension>
+
 <!--:FVK:
    <extension
          point="org.eclipse.equinox.http.registry.filters">
@@ -162,27 +189,6 @@
       </filter>
    </extension>
 -->
-
-   <extension
-         point="org.eclipse.equinox.http.registry.filters">
-      <filter
-            alias="/wiki/*"
-            class="org.apache.wiki.ui.WikiJSPFilter"
-            load-on-startup="true">
-      </filter>
-   </extension>
-
-   <extension
-         point="org.eclipse.core.runtime.adapters">
-      <factory
-            adaptableType="org.apache.wiki.api.core.Command"
-            class="org.elwiki.internal.CmdCodeAdapterFactory">
-         <adapter
-               type="org.elwiki.internal.CmdCode">
-         </adapter>
-      </factory>
-   </extension>
-
 <!-- JSPwiki
    <extension
          point="org.eclipse.equinox.http.registry.filters">
