--- a/elwikijsp.root/features/pom.xml
+++ b/elwikijsp.root/features/pom.xml
@@ -16,7 +16,9 @@
 	</parent>
 
 	<modules>
-		<module>elwiki.feature</module>
+		<module>org.elwiki.feature</module>
 		<module>jsp.bridge.feature</module>
+		<module>elwiki.test.feature</module>
+		<module>elwiki.test_environment.feature</module>
 	</modules>
 </project>
