--- a/elwikijsp.root/releng/tests_configuration/pom.xml
+++ b/elwikijsp.root/releng/tests_configuration/pom.xml
@@ -264,6 +264,7 @@
 							<id>org.eclipse.ui</id>
 							<autoStart>false</autoStart>
 						</bundle>
+
 						<!-- Activating main bundles of OSGI. -->
 						<bundle>
 							<id>org.apache.felix.scr</id>
@@ -275,19 +276,20 @@
 							<level>2</level>
 							<autoStart>true</autoStart>
 						</bundle>
-						<!-- Force activate ElWiki Engine.  ~~~~~~~~~~~~~~~~~ -->
-						<bundle>
-							<id>org.elwiki.api</id>
-							<level>2</level>
-							<autoStart>true</autoStart>
-						</bundle>
-
-<!--
 						<bundle>
 							<id>org.eclipse.core.runtime</id>
 							<level>3</level>
 							<autoStart>false</autoStart>
 						</bundle>
+
+						<!-- Force activate ElWiki Engine.  ~~~~~~~~~~~~~~~~~ -->
+						<!--bundle>
+							<id>org.elwiki.api</id>
+							<level>2</level>
+							<autoStart>true</autoStart>
+						</bundle>-->
+
+<!--
 						<bundle>
 							<id>org.eclipse.equinox.http.jetty</id>
 							<level>2</level>
